--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@heroicons/react": "^1.0.6",
-    "@mui/material": "^5.8.7",
+    "@mui/material": "^5.9.2",
+    "@stripe/firestore-stripe-payments": "0.0.6",
     "firebase": "^9.8.4",
     "next": "latest",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.33.0",
